--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.DetailActivity">
+   >
+
+    <data>
+        <variable
+            name = "model"
+            type = "com.example.practicamvp.viewmodel.DetailViewModel"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.DetailActivity"
+        >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,8 +28,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/cardview_light_background"
-            android:orientation="vertical">
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:id="@+id/iv_logod"
@@ -26,6 +38,7 @@
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
+                app:loadImageDetail="@{model.cupon.imageUrl}"
                 tools:srcCompat="@tools:sample/avatars[3]" />
 
             <LinearLayout
@@ -53,9 +66,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
                     android:minLines="3"
+                    android:text="@{model.cupon.offer}"
 
-
-                    />
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -81,7 +94,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.26"
-                    android:textAlignment="center" />
+                    android:shadowColor="@android:color/black"
+                    android:text="@{model.cupon.code}"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -102,13 +118,18 @@
                     android:text="@string/Store"
 
                     android:textColor="@color/colorPrimary"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+
+                    />
 
                 <TextView
                     android:id="@+id/tv_stored"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.95" />
+                    android:layout_weight="0.95"
+                    android:shadowColor="@android:color/black"
+                    android:text="@{model.cupon.store}"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -136,7 +157,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.3"
-                    android:minLines="2" />
+                    android:minLines="2"
+                    android:text="@{model.cupon.categories}"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -167,7 +190,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.33"
-                    android:minLines="3" />
+                    android:minLines="3"
+                    android:text="@{model.cupon.description}"
+                    android:textColor="@android:color/black" />
 
             </LinearLayout>
 
@@ -196,8 +221,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-
-                    />
+                    android:text="@{model.cupon.endDate}" />
             </LinearLayout>
 
             <TextView
@@ -205,11 +229,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="80dp"
                 android:autoLink="web"
+                android:text="@{model.cupon.url}"
                 android:textAlignment="center" />
 
         </LinearLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
