--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="2dp"
-    android:paddingStart="4dp"
-android:paddingEnd="4dp"
     >
+
+    <data>
+
+        <variable
+            name="position"
+            type="Integer" />
+
+        <variable
+            name="model"
+            type="com.example.practicamvp.viewmodel.MainViewModel" />
+    </data>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:padding="2dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:onClick="@{() -> model.onItemClick(position) }"
+        >
 
 
     <androidx.cardview.widget.CardView
@@ -37,7 +52,7 @@ android:paddingEnd="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:loadImage="@{model.getCuponItem(position).imageUrl}" />
 
             <TextView
                 android:id="@+id/tv_offer"
@@ -46,7 +61,7 @@ android:paddingEnd="4dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/nunito_bold"
-                android:text="TextView"
+                android:text="@{model.getCuponItem(position).offer}"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_logo"
@@ -62,7 +77,7 @@ android:paddingEnd="4dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="center"
                 android:padding="2dp"
-                android:text="10%"
+                android:text="@{model.getCuponItem(position).offerValue}"
                 android:textColor="@color/cardview_light_background"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +91,7 @@ android:paddingEnd="4dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
                 android:autoLink="all"
-                android:text="TextView"
+                android:text="@{model.getCuponItem(position).offerText}"
                 android:textColor="@android:color/holo_blue_dark"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +108,7 @@ android:paddingEnd="4dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/nunito"
-                android:text="TextView"
+                android:text="@{model.getCuponItem(position).store}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -102,4 +117,6 @@ android:paddingEnd="4dp"
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-</FrameLayout>
+
+    </FrameLayout>
+</layout>
